--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -1,9 +1,6 @@
 name: Build docker images (scheduled)
 
 on:
-  push:
-    branches:
-      - docker-image*
   repository_dispatch:
   schedule:
     - cron: "0 1 * * *"
@@ -92,6 +89,7 @@ jobs:
           tags: huggingface/transformers-pytorch-gpu
 
   latest-tensorflow:
+    needs: latest-pytorch
     name: "Latest TensorFlow [dev]"
     runs-on: ubuntu-latest
     steps:
