--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -1,6 +1,9 @@
 name: Build docker images (scheduled)
 
 on:
+  push:
+    branches:
+      - docker-image*
   repository_dispatch:
   schedule:
     - cron: "0 1 * * *"
